tests/new_bad_allocator_readonly.stderr
tests/new_bad_allocator_readonly.hop:5:35: error: HOP2004: type mismatch: cannot use 'ro' of type &Allocator as *Allocator
